testsuite/tests/misc/invalid_static_expr/invalid_concat_4.lkt
import common

@repr_name("foo" & p"bar")
class FooNode implements Node[FooNode] {
}
